--- a/static/pages/bg/homepage.html
+++ b/static/pages/bg/homepage.html
@@ -454,7 +454,7 @@
                     </div>
 
                     <div class="lg:p-10 hover:p-0 h-[300px]  bg-white">
-                        <img :src="product.images[0] ? product.images[0].image : data.settings.logo" @click="forceChange(product.url)" alt="" class="!m-0 w-full h-full object-scale-down cursor-pointer">
+                        <img :src="product.images[0] ? product.images[0].url : data.settings.logo" @click="forceChange(product.url)" alt="" class="!m-0 w-full h-full object-scale-down cursor-pointer">
                         <!-- <div class="bg-neutral-100 animate-pulse shadow animate-infinite animate-duration-[3000ms]  w-full h-full"></div> -->
                     </div>
 
@@ -551,7 +551,7 @@
                     </div>
 
                     <div class="lg:p-10 hover:p-0 h-[300px]  bg-white">
-                        <img :src="product.images[0] ? product.images[0].image : data.settings.logo" @click="forceChange(product.url)" alt="" class="!m-0 w-full h-full object-scale-down cursor-pointer">
+                        <img :src="product.images[0] ? product.images[0].url : data.settings.logo" @click="forceChange(product.url)" alt="" class="!m-0 w-full h-full object-scale-down cursor-pointer">
                         <!-- <div class="bg-neutral-100 animate-pulse shadow animate-infinite animate-duration-[3000ms]  w-full h-full"></div> -->
                     </div>
 
@@ -649,7 +649,7 @@
                     </div>
 
                     <div class="lg:p-10 hover:p-0 h-[300px]  bg-white">
-                        <img :src="product.images[0] ? product.images[0].image : data.settings.logo" @click="forceChange(product.url)" alt="" class="!m-0 w-full h-full object-scale-down cursor-pointer">
+                        <img :src="product.images[0] ? product.images[0].url : data.settings.logo" @click="forceChange(product.url)" alt="" class="!m-0 w-full h-full object-scale-down cursor-pointer">
                         <!-- <div class="bg-neutral-100 animate-pulse shadow animate-infinite animate-duration-[3000ms]  w-full h-full"></div> -->
                     </div>
 
