--- a/static/pages/en/product.html
+++ b/static/pages/en/product.html
@@ -121,7 +121,7 @@
                                             </template>
                                         </div>
                                         <a @click="forceChange(product.url)">
-                                            <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer">
+                                            <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer">
 
                                         </a>
                                     </div>
@@ -169,7 +169,7 @@
                                         </template>
                                     </div>
                                     <a @click="forceChange(product.url)">
-                                        <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-7-i-qyV3btcS9hI8zFVQRzeF.webp">
+                                        <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-7-i-qyV3btcS9hI8zFVQRzeF.webp">
 
                                     </a>
                                 </div>
@@ -217,7 +217,7 @@
                                         </template>
                                     </div>
                                     <a @click="forceChange(product.url)">
-                                        <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-5-i-V5c21yNLmw6gg847OtPa.webp">
+                                        <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-5-i-V5c21yNLmw6gg847OtPa.webp">
 
                                     </a>
                                 </div>
@@ -266,7 +266,7 @@
                                         </template>
                                     </div>
                                     <a @click="forceChange(product.url)">
-                                        <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-4-i-eDtaL6FyTLEV6DYzq34m.webp">
+                                        <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-4-i-eDtaL6FyTLEV6DYzq34m.webp">
 
                                     </a>
                                 </div>
@@ -320,7 +320,7 @@
                                         </template>
                                     </div>
                                     <a @click="forceChange(product.url)">
-                                        <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-3-i-DdYGeASlQQ1V1ziPvqq5.webp">
+                                        <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-3-i-DdYGeASlQQ1V1ziPvqq5.webp">
 
                                     </a>
                                 </div>
@@ -369,7 +369,7 @@
                                         </template>
                                     </div>
                                     <a @click="forceChange(product.url)">
-                                        <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-2-i-f6VWuXt2eWxllkDfXQBB.webp">
+                                        <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-2-i-f6VWuXt2eWxllkDfXQBB.webp">
 
                                     </a>
                                 </div>
@@ -424,7 +424,7 @@
                                         </template>
                                     </div>
                                     <a @click="forceChange(product.url)">
-                                        <img :src="product.images[0] ? product.images[0].image_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-1-i-BAyG2N1jiujKBL3Ph5sf.webp">
+                                        <img :src="product.images[0] ? product.images[0].url_10x10 : data.settings.logo" alt="" class="!m-0 w-full  lg:h-full lg:object-scale-down cursor-pointer" src="https://r2.expozy.com/myexpozypages/shop/products/800x600/p-1-i-BAyG2N1jiujKBL3Ph5sf.webp">
 
                                     </a>
                                 </div>
